# RustyPages

./: .env.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
db/: docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20260323_213147_create_books_table.rs
src/: config.rs  main.rs
src/commands/handlers/: create_book_handler.rs  mod.rs
src/commands/models/: create_book_command.rs  mod.rs
src/domain/: book.rs
src/domain/entities/: book.rs
src/infrastructure/: db.rs  mod.rs
src/infrastructure/errors/: error.rs
src/infrastructure/extractors/: extractor.rs
src/infrastructure/repositories/: book_repository.rs
src/queries/handlers/: get_book_by_id_handler.rs  get_books_handler.rs  mod.rs
src/queries/models/: book_view.rs  mod.rs
src/routes/: book_routes.rs  mod.rs
